--- a/TrackingList/TrackingList/TrackingList.iOS/TrackingList.iOS.csproj
+++ b/TrackingList/TrackingList/TrackingList.iOS/TrackingList.iOS.csproj
@@ -148,6 +148,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
+    <PackageReference Include="XamarinForms.CardView">
+      <Version>1.1.1.5</Version>
+    </PackageReference>
+    <PackageReference Include="XamarinForms.CardView.NetStandard">
+      <Version>1.1.1.5</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
