Versao ajustes layout necessarios

--- a/TrackingList/TrackingList/TrackingList.Android/TrackingList.Android.csproj
+++ b/TrackingList/TrackingList/TrackingList.Android/TrackingList.Android.csproj
@@ -94,13 +94,15 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TrackingList\TrackingList.csproj">
       <Project>{440CCAA7-FD76-4F6D-8216-D5680CC98B3C}</Project>
       <Name>TrackingList</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\drawable\virloc.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
